@@ -27,20 +27,6 @@ var params = map[string]string{
 	"human": "false",
 }
 
-var stateLookup = map[string]State{
-	"inactive": Inactive,
-	"active":   Active,
-}
-
-var licenseLookup = map[string]LicenseType{
-	"oss":      OSS,
-	"trial":    Trial,
-	"standard": Standard,
-	"basic":    Basic,
-	"gold":     Gold,
-	"platinum": Platinum,
-}
-
 // UnmarshalJSON takes a bytes array and convert it to the appropriate license type.
 func (t *LicenseType) UnmarshalJSON(b []byte) error {
 	if len(b) <= 2 {
